# mac-space

./: .gitignore  CHANGELOG.md  Proposal.md  README.md
assets/: README.md
backup-ahk-2026-02-02/: mac-spaces.ahk
backup-ahk-2026-02-02/lib/: desktop.ahk  registry.ahk  window.ahk
docs/: TECHNICAL.md
lib/: config.ahk  hooks.ahk  window.ahk
mac-spaces-rs/: Cargo.toml  README.md
mac-spaces-rs/src/: animation.rs  desktop.rs  hooks.rs  hotkey.rs  main.rs  registry.rs  tray.rs  vda.rs  window.rs
