[package]
name = "mac_spaces"
version = "0.3.0"
edition = "2021"
description = "MacSpaces - Windows 虚拟桌面空间化体验工具"
authors = ["MacSpaces"]

[dependencies]
# Windows API 绑定
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
]}

# DLL 动态加载
libloading = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 托盘图标
tray-icon = "0.14"
muda = "0.13"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 单实例
single-instance = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
embed-resource = "2.4"
